Add basic typeahead interface for spatial coverage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PeriodO client</title>
     <script src="/dist/periodo.js"></script>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/lib/typeaheadjs.css" />
   </head>
   <body>
     <div class="navbar">
