Add lessc dependency

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="/dist/periodo.js"></script>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/lib/typeaheadjs.css" />
+    <link rel="stylesheet" type="text/css" href="/dist/periodo.css" />
   </head>
   <body>
     <div class="navbar">
