Create outline for application- router, index, etc
Also start on view for creating a new periodization

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <div class="navbar">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">PeriodO</a>
+          <a class="navbar-brand" href="#">PeriodO</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li><a></a></li>
-        </ul>
       </div>
     </div>
     <div id="main" class="container"></div>
