Update navbar style

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" type="text/css" href="/dist/periodo.css" />
   </head>
   <body>
-    <div class="navbar">
+    <div id="nav" class="navbar">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">PeriodO</a>
         </div>
+        <div id="spinner"></div>
       </div>
     </div>
     <div id="main" class="container"></div>
