--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">PeriodO</a>
+          <ul class="nav navbar-nav">
+            <li> <a href="#admin/">Admin</a></li>
+          </ul>
         </div>
         <div id="spinner"></div>
       </div>
