--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">PeriodO</a>
           <ul class="nav navbar-nav">
-            <li> <a href="#admin/">Admin</a></li>
+            <!-- <li> <a href="#admin/">Admin</a></li> -->
           </ul>
         </div>
         <div id="spinner"></div>
