Add link for signing in

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">PeriodO</a>
+          <div id="spinner"></div>
           <ul class="nav navbar-nav">
-            <!-- <li> <a href="#admin/">Admin</a></li> -->
+            <!-- <li><a href="#admin/">Admin</a></li> -->
           </ul>
         </div>
-        <div id="spinner"></div>
+        <div class="navbar-header pull-right">
+          <ul class="nav navbar-nav">
+            <li><a href="#signin/">Sign in</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="main" class="container"></div>
