Enable orcid oauth authentication

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
           </ul>
         </div>
         <div class="navbar-header pull-right">
-          <ul class="nav navbar-nav">
-            <li><a href="#signin/">Sign in</a></li>
+          <ul id="auth-menu" class="nav navbar-nav">
+            <li id="auth-signin-link"><a href="#signin/">Sign in</a></li>
+            <li id="auth-signout-link" class="hide">Signed in as <span></span><a href="#signout/">Sign out</a></li>
           </ul>
         </div>
       </div>
