--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div id="nav" class="navbar">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">PeriodO</a>
+            <a class="navbar-brand" id="periodo-logo" href="#">PeriodO</a>
+            <p class="navbar-text" id="current-backend"></p>
             <div id="spinner"></div>
             <ul class="nav navbar-nav">
               <!-- <li><a href="#admin/">Admin</a></li> -->
