--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
     </div>
     <div id="footer">
       <div class="container">
-        <div id="version-number">
-          PeriodO client
-          <a href="https://github.com/periodo/periodo-client/tree/v0.4.0">
-            v0.4.0
-          </a>
-          &ndash; 13 April 2015
-        </div>
+        <div id="version-number"></div>
       </div>
     </div>
   </body>
