Add error logging function

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div id="footer">
       <div class="container">
         <div id="version-number"></div>
+        <div id="error-list"></div>
       </div>
     </div>
   </body>
