--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>PeriodO client</title>
-    <link rel="stylesheet" type="text/css" href="/dist/periodo.css" />
+    <style type="text/css">
+      html, body, #main {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+
+        font-size: 14px;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
 
   <body>
