--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         font-size: 14px;
         font-family: sans-serif;
       }
+
+      html {
+        overflow-y: scroll;
+      }
+
     </style>
   </head>
 
