Normalize button/menu focus styles across browsers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         overflow-y: scroll;
       }
 
+      [role="button"]:focus,
+      [role="menuitem"]:focus,
+      button:focus {
+        outline: 3px solid steelblue;
+      }
+
     </style>
   </head>
 
