--- a/index.TEMPLATE.html
+++ b/index.TEMPLATE.html
@@ -32,6 +32,6 @@
 
   <body>
     <div id="main"></div>
-    <script src="dist/periodo.js"></script>
+    <script src="JS-FILENAME"></script>
   </body>
 </html>
