Improve Makefile, add missing package.json fields
All working files are now sent to the dist/ directory instead of
populating the root directory. NPM publish is run in a separate
directory than the root directory, so that we only include the files we
want, from a known good archive.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 
   <body>
     <div id="main"></div>
-    <script src="JS-FILENAME"></script>
+    <script src="periodo-client.js"></script>
   </body>
 </html>
