Set global variables in index.html file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
   <body>
     <div id="main"></div>
+
+    <script type="text/javascript">
+      window.PERIODO_ORCID_URL = '/register'
+      window.PERIODO_PROXY_URL = 'https://corsproxy.perio.do/'
+      window.CORS_PROXY_ENABLED = true
+      window.PERIODO_PERMALINK_URL = 'http://n2t.net/:99152'
+    </script>
+
     <script src="periodo-client.js"></script>
   </body>
 </html>
