--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div id="main"></div>
 
     <script type="text/javascript">
-      window.PERIODO_ORCID_URL = '/register'
+      window.PERIODO_SERVER_URL = '/'
       window.PERIODO_PROXY_URL = 'https://corsproxy.perio.do/'
       window.CORS_PROXY_ENABLED = true
-      window.PERIODO_PERMALINK_URL = 'http://n2t.net/:99152'
+      window.PERIODO_PERMALINK_URL = 'http://n2t.net/ark:99152'
     </script>
 
     <script src="periodo-client.js"></script>
