Remove assumption that dev server and client will be in same domain

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="main"></div>
 
     <script type="text/javascript">
-      window.PERIODO_SERVER_URL = '/'
+      window.PERIODO_SERVER_URL = 'http://localhost.localdomain:5000/'
       window.PERIODO_PROXY_URL = 'https://corsproxy.perio.do/'
       window.CORS_PROXY_ENABLED = true
       window.PERIODO_PERMALINK_URL = 'http://n2t.net/ark:99152'
