--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <script type="text/javascript">
       window.PERIODO_SERVER_URL = 'http://localhost.localdomain:5000/'
-      window.PERIODO_PROXY_URL = 'https://corsproxy.perio.do/'
+      window.PERIODO_PROXY_URL = 'https://ptgolden.org/cors-anywhere/'
       window.CORS_PROXY_ENABLED = true
       window.PERIODO_PERMALINK_URL = 'http://n2t.net/ark:99152/'
     </script>
