less maddening scroll behavior

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       html {
         overflow-y: scroll;
+        overscroll-behavior: none; /* csslint allow: known-properties */
       }
 
       [role="button"]:focus,
