match focus outline to rest of UI

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       [role="button"]:focus,
       [role="menuitem"]:focus,
       button:focus {
-        outline: 3px solid steelblue;
+        outline: 3px solid #4dabf7;
       }
 
       :focus {
