--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="http://localhost.localdomain:5000">
+    <link rel="dns-prefetch" href="http://localhost.localdomain:5000">
     <title>PeriodO client</title>
     <style type="text/css">
       html, body, #main {
