--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="http://localhost.localdomain:5000">
     <link rel="dns-prefetch" href="http://localhost.localdomain:5000">
     <title>PeriodO client</title>
