meta description header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Browser-based client for browsing and
+editing data from the PeriodO time period gazetteer">
     <link rel="preconnect" href="http://localhost.localdomain:5000">
     <link rel="dns-prefetch" href="http://localhost.localdomain:5000">
     <title>PeriodO client</title>
