--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=736, initial-scale=1.0">
     <meta name="description" content="Browser-based client for browsing and
 editing data from the PeriodO time period gazetteer">
     <link rel="preconnect" href="http://localhost.localdomain:5000">
