use staging cors proxy for dev

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ editing data from the PeriodO time period gazetteer">
 
     <script type="text/javascript">
       window.PERIODO_SERVER_URL = 'http://localhost.localdomain:5000/'
-      window.PERIODO_PROXY_URL = 'https://ptgolden.org/cors-anywhere/'
+      window.PERIODO_PROXY_URL = 'https://corsproxy.staging.perio.do/'
       window.CORS_PROXY_ENABLED = true
     </script>
 
