--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ editing data from the PeriodO time period gazetteer">
         padding: 0;
 
         font-size: 14px;
-        font-family: sans-serif;
+        font-family: Arial, sans-serif;
       }
 
       html {
